<resources>


    <string name="app_name">ViewPagerSwipe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_fauteuil">FAUTEUIL</string>
    <string name="nav_canape">CANAPE</string>
    <string name="nav_anglefixe">ANGLE FIXE</string>
    <string name="nav_convertible">CONVERTIBLE</string>
    <string name="nav_angleconvertible">ANGLE CONVERTIBLE</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>FAUTEUIL</item>
        <item>CANAPE</item>
        <item>ANGLE FIXE</item>
        <item>CONVERTIBLE</item>
        <item>ANGLE CONVERTIBLE</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="content">Put all your designs here</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hide">Hide Sliding Up Layout</string>
    <string name="show">Show Sliding Up Layout</string>
    <string name="slide">This is a simple Sliding Up Layout</string>

    <string-array name="nombre_article_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="list_array_magasin">
        <item>Fly ANNECY</item>
        <item>Fly CANNE</item>
        <item>FLY EPINAL</item>
        <item>FLY EVREUX</item>
        <item>FLY AGEN</item>
    </string-array>

    <string-array name="list_array_civilité">
        <item>Mr</item>
        <item>Mme</item>
        <item>Mlle</item>

    </string-array>

</resources>
